<resources>
    <string name="app_name">Map Your Tasks</string>
    <string name="ui_top_message">Map Your Tasks</string>
    <string name="call_explicit_intent">Sign Out</string>
    <string name="add_task">Add Task</string>
    <string name="to_map">Open Map</string>

    <!-- Map View Strings -->
    <string name="select_all_option">(Select all)</string>
    <string name="dist_filter_header">Max Distance (miles)</string>
    <string name="dist_filter_button">Filter Tasks</string>

    <!--Add Task View Strings-->
    <string name="add_task_name">Name:</string>
    <string name="add_task_desc">Description:</string>
    <string name="add_task_addr">Address:</string>
    <string name="add_task_validate_addr">Validate Address</string>
    <string name="add_task_date">Date:</string>
    <string name="add_task_time">Time:</string>
    <string name="frag_map">Map</string>
    <string name="nav_drawer_item_home">Map</string>
    <string name="nav_drawer_notification">Notifications</string>
    <string name="nav_drawer_item_list">Tasks</string>
    <string name="nav_drawer_item_add">Add Task</string>
    <string name="log_out_string">Log Out</string>

    <string name="notification_on">On</string>
    <string name="notification_off">Off</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="frag_button_confirm">Add Task</string>
    <string name="frag_button_clear">Clear</string>
    <string name="frag_button_update">Update Task</string>
    <string name="popup_menu_complete">Complete</string>
    <string name="popup_menu_update">Update</string>
    <string name="popup_menu_delete">Delete</string>
    <string name="popup_menu_undo">Undo Completion</string>

    <string-array name="task_options">
        <item>Update</item>
        <item>Delete</item>
        <item>Complete</item>
    </string-array>
</resources>