<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300sp"
        android:layout_marginTop="20sp">

        <CheckBox
            android:id="@+id/map_all_tasks_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_marginLeft="10sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/map_all_tasks_box"
            android:layout_marginTop="35sp"
            android:text="@string/select_all_option" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tasks_for_map_recycler"
            android:layout_height="300sp"
            android:layout_width="match_parent"
            android:layout_below="@+id/map_all_tasks_box"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="20sp"
            android:id="@+id/dist_filter_header"
            android:text="@string/dist_filter_header"/>

        <EditText
            android:layout_width="70sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="10sp"
            android:layout_toRightOf="@id/dist_filter_header"
            android:id="@+id/dist_filter_edit" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="10sp"
            android:layout_toRightOf="@id/dist_filter_edit"
            android:id="@+id/dist_filter_button"
            android:text="@string/dist_filter_button"/>

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="350sp"/>

</LinearLayout>